<resources>
    <string name="application_name">My Cart</string>
    <string name="view_cart">View Cart</string>
    <string name="searching">Search</string>
    <string name="description">description</string>
    <string name="quantity">Quantity</string>
    <string name="sum_money">Sum Price</string>
    <string name="total_money">Total:</string>
    <string name="checking_out">Check out</string>
    <string name="num_quantity">10</string>
    <string name="sum_cost">230500</string>
</resources>