<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cart_fragment"
    tools:context=".fragment.CartFragment">

    <ImageView
        android:id="@+id/shoppingBags"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="173dp"
        android:contentDescription="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/online_shopping" />

    <TextView
        android:id="@+id/myCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/capriola"
        android:text="@string/application_name"
        android:textColor="#DA6A1F"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingBags" />

    <TextView
        android:id="@+id/text_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/capriola"
        android:text="@string/quantity"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/sumPrice"
        app:layout_constraintTop_toBottomOf="@+id/myCart" />

    <TextView
        android:id="@+id/sumPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/capriola"
        android:text="@string/sum_money"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myCart" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="31dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_quantity"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:background="@color/semi_gray">

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/total_money"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/total_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#F12E07"
            android:textSize="21sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkout_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/capriola"
            android:gravity="center"
            android:text="@string/checking_out"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:icon="@drawable/ic_baseline_payment_24" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>