<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="2dp"
        app:cardCornerRadius="11dp"
        android:background="@drawable/grid_border_box"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center" >

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:layout_marginRight="9dp"
                android:layout_marginBottom="9dp"
                android:scaleType="fitCenter"
                android:layout_marginTop="9dp"
                android:layout_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_margin="2dp"
                android:src="@drawable/ic_ordinary_image_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/description"
                />

            <LinearLayout
                android:id="@+id/item_name_and_price"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="11dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/bottom_sheet_behavior"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageButton
                    android:id="@+id/raise_quantity"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:contentDescription="@string/description"
                    android:src="@drawable/ic_baseline_keyboard_arrow_increase_24" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_quantity"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <ImageButton
                    android:id="@+id/decrease_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description"
                    android:src="@drawable/ic_baseline_keyboard_arrow_decrease_24" />
            </LinearLayout>

            <TextView
                android:id="@+id/sum_money"
                android:layout_width="41dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sum_cost"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="13sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>